[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/prototype/Name Selection.gd" type="Script" id=1]
[ext_resource path="res://sprites/DialogBox.png" type="Texture" id=2]
[ext_resource path="res://scenes/prototype/Text1.gd" type="Script" id=3]
[ext_resource path="res://scenes/prototype/LineEdit.gd" type="Script" id=4]

[node name="Name Selection" type="Node2D"]
script = ExtResource( 1 )

[node name="DialogBox" type="Sprite" parent="."]
position = Vector2( 484, 101 )
scale = Vector2( 1.14098, 0.827273 )
texture = ExtResource( 2 )

[node name="Name" type="RichTextLabel" parent="DialogBox"]
margin_left = -245.488
margin_top = -54.3956
margin_right = -189.488
margin_bottom = -30.3956
text = "???"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text1" type="RichTextLabel" parent="DialogBox"]
margin_left = -235.0
margin_top = -16.0
margin_right = 380.0
margin_bottom = 62.0
rect_scale = Vector2( 0.798, 1.114 )
text = "My name is "
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 289.636
margin_top = 83.5355
margin_right = 401.636
margin_bottom = 107.536
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="text_entered" from="LineEdit" to="DialogBox/Text1" method="_on_LineEdit_text_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="DialogBox/Text1" method="_on_Timer_timeout"]
